# ComputerVision_Puzzle

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/cv_puzzle/: __main__.py
src/cv_puzzle/components/: camera.py  puzzle.py  userhand.py  utils.py
