[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_puzzle"
version = "1.0.0"
authors = [
    {name = "Richard Joseph Omega", email = "richardjoseph.omega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python == 4.7.0.72",
    "mediapipe == 0.10.9"
]

[project.scripts]
cv_puzzle = "cv_puzzle.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==23.12.1"
]

